# rv1126_ocr_rtsp

./: .gitignore  CMakeLists.txt  README.md  async_cv_detect.cpp  build.sh  coco_dataset_1.txt  demo.cpp  mjpg_ocr copy.cpp  mjpg_ocr.cpp  onnx_to_rknn.py
back/: mjpg_ocr
include/: Crnn.h  DbNet.h  OcrUtils.h  clipper.h  comm.h  curl_get_file.h  detect_service.h  models.h  output_json.h  rknn_funcs.h  rknn_model.h  yolo.h
model/: demo.cpp  det_new.rknn  repvgg_s.rknn  static_det_0603.rknn  static_model.onnx  static_model_0603.rknn  static_model_0604.rknn  static_model_0625.onnx  static_model_0625.rknn
model_convert/: onnx2rknn.py  static_det_0603.rknn  static_det_060402.rknn  static_model_0603.onnx  static_model_060402.onnx
src/: Crnn.cpp  DbNet.cpp  OcrUtils.cpp  clipper.cpp  curl_get_file.cpp  detect_service.cpp  models.cpp  output_json.cpp  rknn_funcs.cpp  rknn_model.cpp  xxx  yolo.cc
